Minor: "Behalf" was incorrect

--- a/report.tex
+++ b/report.tex
@@ -34,7 +34,7 @@
 \section{Introduction}
 This document goal is to explain and document the choice made by Polylan for their LAN parties.
 The last such event was the first and biggest never made in Switzerland.
-Polylan 23 had nearly 800 players in the same room to play video games, exchange files and enjoy a great time on the behalf of the committee who designed the whole system and had to fix problems as they came, and they sure came.
+Polylan 23 had nearly 800 players in the same room to play video games, exchange files and enjoy a great time while the part of the committee who designed the whole system had to fix problems as they came, and they sure came.
 The event was usually organized for around 230 players in the Rolex Learning Center but they decided to move to the freshly-built Congress Center to welcome more players.
 These choices introduced new challenges: first the available material and constraints were not the same, second they were more than thrice the people of their last party and that changes how the LAN network was designed to scale.
 
